fix: use `clip-path` instead of `overflow-clip-margin`

--- a/src-inject/vscode-frosted-glass-theme.css
+++ b/src-inject/vscode-frosted-glass-theme.css
@@ -129,13 +129,26 @@
 /* Menu Animation */
 .monaco-menu-container,
 .context-view {
-  overflow: clip !important;
-  overflow-clip-margin: 10px !important;
+  clip-path: inset(-1px calc(-infinity * 1px) calc(-infinity * 1px));
+}
+
+@supports not (clip-path: inset(1px)) {
+  .monaco-menu-container,
+  .context-view {
+    overflow: clip !important;
+    overflow-clip-margin: 10px !important;
+  }
 }
 
 /* Dropdown Animation */
 .select-container > .context-view {
-  overflow-clip-margin: 0px !important;
+  clip-path: inset(0px calc(-infinity * 1px) calc(-infinity * 1px));
+}
+
+@supports not (clip-path: inset(1px)) {
+  .select-container > .context-view {
+    overflow-clip-margin: 0px !important;
+  }
 }
 
 /* Hover Animation */
@@ -163,6 +176,10 @@ div[widgetid="editor.contrib.resizableContentHoverWidget"] {
   z-index: 15;
 }
 
+.pane-header {
+  flex-shrink: 0;
+}
+
 .pane-body {
   pointer-events: none;
 }
@@ -173,8 +190,16 @@ div[widgetid="editor.contrib.resizableContentHoverWidget"] {
 
 .pane-body,
 .pane-body .monaco-list > .monaco-scrollable-element {
-  overflow: clip !important;
-  overflow-clip-margin: 22px;
+  overflow: visible !important;
+  clip-path: inset(-22px);
+}
+
+@supports not (clip-path: inset(1px)) {
+  .pane-body,
+  .pane-body .monaco-list > .monaco-scrollable-element {
+    overflow: clip !important;
+    overflow-clip-margin: 22px;
+  }
 }
 
 .search-view .results,
